test_outputs/connlist/semanticDiff-same-topologies-new2_connlist_output.txt
0.0.0.0-255.255.255.255 => demo/cog-agents-account-query[DaemonSet] : All Connections
0.0.0.0-255.255.255.255 => demo/cog-agents-bank-ui[DaemonSet] : All Connections
demo/cog-agents-account-command[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
demo/cog-agents-account-command[DaemonSet] => demo/cog-agents-account-query[DaemonSet] : All Connections
demo/cog-agents-account-command[DaemonSet] => demo/cog-agents-bank-ui[DaemonSet] : All Connections
demo/cog-agents-account-query[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
demo/cog-agents-account-query[DaemonSet] => demo/cog-agents-bank-ui[DaemonSet] : All Connections
demo/cog-agents-bank-ui[DaemonSet] => 0.0.0.0-255.255.255.255 : All Connections
demo/cog-agents-bank-ui[DaemonSet] => demo/cog-agents-account-command[DaemonSet] : TCP 8081-8082,UDP 9091
demo/cog-agents-bank-ui[DaemonSet] => demo/cog-agents-account-query[DaemonSet] : All Connections
